# ch4_pinn

./: .gitignore  README.md  pyproject.toml
config/: main.yaml
config/process/: process1.yaml
src/: Costants.py  IasiNoiseOperator.py  IasiNoiseTransformer.py  IasiPerBandPcaTransformer.py  process.py  train_model.py
